--- a/Index.html
+++ b/Index.html
@@ -8,14 +8,15 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap" rel="stylesheet">
+   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"> 
 </head>
 <body>
 <ul class="menu">
-<li class="item">HOME</li>
- <li class="item">VIDEOS</li>
-  <li class="item">WORK</li>
-   <li class="item">WRITING</li>
-    <li class="item">CONTACTS</li>
+<li class="item"> <a href="#HOME">HOME</a></li>
+ <li class="item"> <a href="#VIDEOS">VIDEOS</a></li>
+  <li class="item"> <a href="#WORK">WORK</a></li>
+   <li class="item"> <a href="#WRITING">WRITING</a></li>
+    <li class="item"> <a href="#CONTACTS">CONTACTS</a></li>
 
     </ul>
 <section id="HOME">
@@ -28,5 +29,18 @@
  <h1>Hi!</h1>
  <p>Tim Berners-Lee is a software engineer who invented the Internet (or the World Wide Web) in 1989 while at CERN, the European Particle Physics Laboratory. He is director of the World Wide Web Consortium that he founded and a Professor in the Computer Science Department at the University of Oxford.
 In 2001 he became a Fellow of the Royal Society and in 2004 he was knighted.<br><br>In 1994 Berners-Lee founded the World Wide Web Consortium (W3C) at the Laboratory of Computer Science (LCS) at the Massachusetts Institute of Technology in Boston. It was made up of companies that wanted to work together to create Web standards and also improve the Web. It was quickly agreed that the technology should be free of royalties and patents. Berners-Lee has served as director of this W3C since it was founded. In 1995 Microsoft produced the first version of Internet Explorer and this commercial browser created enormous growth in websites and web users. The Web was first used for e-commerce in 1997.</p>   </section>
+<section id="VIDEOS">
+<h1>Videos</h1>
+<iframe width="696" height="393" src="https://www.youtube.com/embed/OM6XIICm_qo" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>    <iframe width="699" height="393" src="https://www.youtube.com/embed/rCplocVemjo" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></section>
+<section id="WORK">
+<h1>Work</h1>
+<iframe width="700" height="400" src="https://en.wikipedia.org/wiki/Tim_Berners-Lee#Career_and_research"></iframe>           </section>
+<section id="WRITING">
+<h1>Writings by Tim Berners-Lee</h1>
+<a href="https://www.theguardian.com/technology/2019/mar/12/tim-berners-lee-on-30-years-of-the-web-if-we-dream-a-little-we-can-get-the-web-we-want" target="_blank">30 years of World Wide Web</a>    </section>
+ <section id="CONTACTS">
+ <h1>Contacts</h1>
+<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2948.088899804998!2d-71.09262648523716!3d42.36194464297643!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x89e370a94526b345%3A0x303ada1e9664dfed!2sMIT%20Computer%20Science%20%26%20Artificial%20Intelligence%20Laboratory!5e0!3m2!1sen!2sin!4v1634730480476!5m2!1sen!2sin" width="850" height="650" style="border:0;" allowfullscreen="" loading="lazy"></iframe> <br>
+<i class="fa fa-envelope"></i>&nbsp;&nbsp; <a href="mailto: cos@timbl.com"> cos@timbl.com</a>    </section>   
 </body>
 </html>
